feat: upgrade platform and harden service security
Co-Authored-By: Claude <noreply@anthropic.com>